# fdi

./: Cargo.toml  log.txt
src/: main.rs
