[package]
name = "fdi"
version = "0.1.0"
authors = ["Jason Cardinal <jason.cardinal@timiosdevelopment.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pancurses = "0.16"
tokio = {version = "0.3", features = ["full"] }
futures = "0.3"
termion = "1.5"
fuzzy-matcher = "0.3"
